<resources>
    <string name="app_name">News App</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_news">No News Found</string>
    <string name="guardian_date_time">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date">LLL dd, yyy</string>
    <string name="time">h:mm a</string>
    <string name="section">section</string>
    <string name="category">category</string>
    <string name="news">news</string>
    <string name="publication_date">publication date</string>
    <string name="author">author</string>
    <string name="publication_time">publication time</string>
</resources>
